isolated-secrets-store-k8s/manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    sidecar.istio.io/inject: 'true'
  labels:
    app: secrets-store
  name: secrets-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secrets-store
  strategy: {}
  template:
    metadata:
      labels:
        app: secrets-store
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
      - image: quay.io/zgrinber/secrets-store:1
        name: secrets-container
