isolated-secrets-store-k8s/manifests/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: secrets-store
  name: secrets-store
spec:
  ports:
  - name: http # This one is critical for Istio to enable Auto mTLS from envoy proxy to envoy proxy
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: secrets-store
  sessionAffinity: None
  type: ClusterIP
